@@ -57,7 +57,7 @@ class KodiMediaset(object):
                                        'sub_brand_id': prog['mediasetprogram$subBrandId']},
                                       videoInfo=infos, arts=arts)
             elif 'mediasettvseason$brandId' in prog:
-                kodiutils.addListItem(prog["title"],
+                kodiutils.addListItem(prog["mediasettvseason$displaySeason"],
                                       {'mode': 'programma',
                                        'brand_id': prog['mediasettvseason$brandId']},
                                       videoInfo=infos, arts=arts)
@@ -74,7 +74,7 @@ class KodiMediaset(object):
 
     def root(self):
         # kodiutils.addListItem(kodiutils.LANGUAGE(32101), {'mode': 'tutto'})
-        # kodiutils.addListItem(kodiutils.LANGUAGE(32106), {'mode': 'programmi'})
+        kodiutils.addListItem(kodiutils.LANGUAGE(32106), {'mode': 'programmi'})
         kodiutils.addListItem(kodiutils.LANGUAGE(32102), {'mode': 'fiction'})
         kodiutils.addListItem(kodiutils.LANGUAGE(32103), {'mode': 'film'})
         kodiutils.addListItem(kodiutils.LANGUAGE(32104), {'mode': 'kids'})
@@ -151,8 +151,12 @@ class KodiMediaset(object):
         kodiutils.endScript()
 
     def elenco_programmi_root(self):
-        kodiutils.addListItem(kodiutils.LANGUAGE(32121), {'mode': 'programmi', 'all': 'true'})
-        kodiutils.addListItem(kodiutils.LANGUAGE(32122), {'mode': 'programmi', 'all': 'false'})
+        # kodiutils.addListItem(kodiutils.LANGUAGE(32121), {'mode': 'programmi', 'all': 'true'})
+        # kodiutils.addListItem(kodiutils.LANGUAGE(32122), {'mode': 'programmi', 'all': 'false'})
+        for sec in self.med.OttieniCategorieProgrammi():
+            if ("uxReference" not in sec):
+                continue
+            kodiutils.addListItem(sec["title"], {'mode': 'sezione', 'id': sec['uxReference']})
         kodiutils.endScript()
 
     def elenco_programmi_tutti(self, inonda, page=None):
@@ -256,22 +260,13 @@ class KodiMediaset(object):
                     32130), {'mode': 'sezione', 'id': sid, 'page': page + 1 if page else 2})
         kodiutils.endScript()
 
-    def elenco_stagioni_list(self, seriesId, title):
+    def elenco_stagioni_list(self, seriesId):
         els = self.med.OttieniStagioni(seriesId, sort='startYear|desc')
         if len(els) == 1:
             self.elenco_sezioni_list(els[0]['mediasettvseason$brandId'])
         else:
-            # workaround per controllare se è già una stagione e non una serie
-            brandId = -1
-            for el in els:
-                if el['title'] == title:
-                    brandId = el['mediasettvseason$brandId']
-                    break
-            if brandId == -1:
-                self.__analizza_elenco(els)
-                kodiutils.endScript()
-            else:
-                self.elenco_sezioni_list(brandId)
+            self.__analizza_elenco(els)
+            kodiutils.endScript()
 
     def elenco_sezioni_list(self, brandId):
         els = self.med.OttieniSezioniProgramma(
@@ -300,7 +295,7 @@ class KodiMediaset(object):
             infos = _gather_info(prog)
             arts = _gather_art(prog)
             if 'tuningInstruction' in prog:
-                if prog['tuningInstruction'] and not prog['mediasetstation$eventBased']:
+                if prog['tuningInstruction'] and not prog.get('mediasetstation$eventBased', False):
                     kodiutils.addListItem(prog["title"],
                                           {'mode': 'guida_tv', 'id': prog['callSign'],
                                            'week': staticutils.get_timestamp_midnight()},
@@ -358,7 +353,7 @@ class KodiMediaset(object):
         els = self.med.OttieniCanaliLive(sort='ShortTitle')
         for prog in els:
             if (prog['callSign'] in chans and 'tuningInstruction' in prog and
-                    prog['tuningInstruction'] and not prog['mediasetstation$eventBased']):
+                    prog['tuningInstruction'] and not prog.get('mediasetstation$eventBased', False)):
                 chn = chans[prog['callSign']]
                 if chn['arts'] == {}:
                     chn['arts'] = _gather_art(prog)
@@ -525,7 +520,7 @@ class KodiMediaset(object):
                 self.elenco_sezione(params['id'])
             if params['mode'] == "programma":
                 if 'series_id' in params:
-                    self.elenco_stagioni_list(params['series_id'], params['title'])
+                    self.elenco_stagioni_list(params['series_id'])
                 elif 'sub_brand_id' in params:
                     if 'start' in params:
                         self.elenco_video_list(params['sub_brand_id'], int(params['start']))
